# notamem

./: .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.cfg
src/: app.py
src/client/: cache.py
src/configs/: alembic.ini  app_config.py  settings-example.yaml
src/controllers/: users.py
src/models/: users.py
src/postgres/alembic/: env.py
src/postgres/alembic/versions/: fc6a3d4ef9be_create_user_table.py
src/postgres/migrations/: env.py
src/postgres/migrations/versions/: 79c40f4112c4_add_hashed_password_and_username_to_user.py  7a3eacfdfd42_create_tables_notes_tasks_reminders.py  fc6a3d4ef9be_create_user_table.py  fd86cad92046_update_users_table.py
src/postgres/models/: __init__.py  notes.py  reminders.py  tasks.py  users.py
src/tests/: conftest.py  test_users.py
